// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SortOptions component snaps renderers should not render SortOptions when no type is specified 1`] = `null`;

exports[`SortOptions component snaps renderers should render SortOptions in default mode 1`] = `
<div
  className="sort-options theme-sort-options"
>
  <span
    className="option-label theme-option-label"
  >
    Sort:
  </span>
  <OrderChooser
    icon="talend-sort-az"
    label="Sort by name"
    onClick={[Function]}
    tooltipPlacement="top"
  />
  <OrderChooser
    icon="talend-sort-desc"
    label="Sort by date"
    onClick={[Function]}
    tooltipPlacement="top"
  />
</div>
`;

exports[`SortOptions component snaps renderers should render SortOptions with date in ASC mode 1`] = `
<div
  className="sort-options theme-sort-options"
>
  <span
    className="option-label theme-option-label"
  >
    Sort:
  </span>
  <OrderChooser
    icon="talend-sort-az"
    label="Sort by name"
    onClick={[Function]}
    tooltipPlacement="top"
  />
  <OrderChooser
    asc={true}
    icon="talend-sort-desc"
    label="Sort by date"
    onClick={[Function]}
    tooltipPlacement="top"
  />
</div>
`;

exports[`SortOptions component snaps renderers should render SortOptions with name in ASC mode 1`] = `
<div
  className="sort-options theme-sort-options"
>
  <span
    className="option-label theme-option-label"
  >
    Sort:
  </span>
  <OrderChooser
    asc={true}
    icon="talend-sort-az"
    label="Sort by name"
    onClick={[Function]}
    tooltipPlacement="top"
  />
  <OrderChooser
    icon="talend-sort-desc"
    label="Sort by date"
    onClick={[Function]}
    tooltipPlacement="top"
  />
</div>
`;

exports[`SortOptions component snaps renderers should render SortOptions with only the date type 1`] = `
<div
  className="sort-options theme-sort-options"
>
  <span
    className="option-label theme-option-label"
  >
    Sort:
  </span>
  <OrderChooser
    asc={true}
    icon="talend-sort-desc"
    label="Sort by date"
    onClick={[Function]}
    tooltipPlacement="top"
  />
</div>
`;

exports[`SortOptions component snaps renderers should render SortOptions with only the name type 1`] = `
<div
  className="sort-options theme-sort-options"
>
  <span
    className="option-label theme-option-label"
  >
    Sort:
  </span>
  <OrderChooser
    icon="talend-sort-az"
    label="Sort by name"
    onClick={[Function]}
    tooltipPlacement="top"
  />
</div>
`;
